--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,3 +69,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 spring.web.resources.static-locations=classpath:/static/
 
+cloudinary.cloud-name=dfwbuxr0c
+cloudinary.api-key=169597231938161
+cloudinary.api-secret=-rawQzc9TSHIDQnAtm2boO_GKb0
+
