--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=AsmGD1
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %yellow(%-5level) %red([%thread]) %blue(%logger{255}) - %msg%n}
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ClothingACVShop;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ACVStore;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=123456aA$
+spring.datasource.password=12345678
 
 # Cho phep dung .sql de tao bang va insert du lieu
 # following need for creating tables
@@ -68,4 +68,5 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 spring.web.resources.static-locations=classpath:/static/
+
 
