--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,3 +75,5 @@ cloudinary.api-secret=-rawQzc9TSHIDQnAtm2boO_GKb0
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+spring.thymeleaf.cache=false 
