--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.application.name=AsmGD1
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %yellow(%-5level) %red([%thread]) %blue(%logger{255}) - %msg%n}
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ACVStore;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.password=12345678
 
 # Cho phep dung .sql de tao bang va insert du lieu
 # following need for creating tables
 #script-based initialization is performed by default only for embedded databases (e.c H2),
 #to always initialize a database using scripts, we'll have to use:
 spring.jpa.generate-ddl=true
-logging.level.net.ttddyy.dsproxy.listener=debug
+logging.level.net.ttddyy.dsproxy.listener=debug 
 
 # Cho phep dung dong thoi Hibernate va .sql de tao bang
 #after Hibernate schema creation is performed then additionally schema.sql is read
