--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.defer-datasource-initialization=true
 # following need for add data into table (not need in H2-Database)
 #to always initialize a database using scripts, we'll have to use:
 #embedded, never, always
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 #disable Hibernate automatic schema creation
 #This will ensure that script-based initialization is performed using schema.sql and data.sql directly.
@@ -42,12 +42,12 @@ logging.level.org.hibernate.type=trace
 #customizing column name
 #spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# C?u hình OAuth2 Google
+#  OAuth2 Google
 spring.security.oauth2.client.registration.google.client-id=307722207866-0mmbf156lfegenhhe3d6f9c9q833hdem.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
 
-# C?u hình OAuth2 Facebook
+# OAuth2 Facebook
 spring.security.oauth2.client.registration.facebook.client-id=1554266721939730
 spring.security.oauth2.client.registration.facebook.client-secret=bf608457f76cf319e174409e37a82443
 spring.security.oauth2.client.registration.facebook.scope=public_profile,email
@@ -59,7 +59,6 @@ spring.mail.password=tmtk byjt mtrb dghp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#làm ?nh trong product có dung l??ng l?n h?n
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 server.tomcat.max-swallow-size=50MB
