--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,10 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>2.7.5</version> <!-- Phiên bản 5.x -->
 		</dependency>
