--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,15 +42,17 @@ logging.level.org.hibernate.type=trace
 #customizing column name
 #spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-#  OAuth2 Google
+# OAuth2 Google
 spring.security.oauth2.client.registration.google.client-id=307722207866-0mmbf156lfegenhhe3d6f9c9q833hdem.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 
 # OAuth2 Facebook
 spring.security.oauth2.client.registration.facebook.client-id=1554266721939730
 spring.security.oauth2.client.registration.facebook.client-secret=bf608457f76cf319e174409e37a82443
 spring.security.oauth2.client.registration.facebook.scope=public_profile,email
+spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/facebook
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
