--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,6 +54,9 @@ spring.security.oauth2.client.registration.facebook.client-secret=bf608457f76cf3
 spring.security.oauth2.client.registration.facebook.scope=public_profile,email
 spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/facebook
 
+# OAuth2 VPS
+server.forward-headers-strategy=framework
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=datn.acv@gmail.com
