--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,7 +71,7 @@ server.tomcat.max-swallow-size=50MB
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
-spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=classpath:/static/,file:C:/DATN/uploads/
 
 cloudinary.cloud-name=dfwbuxr0c
 cloudinary.api-key=169597231938161
