--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,3 +80,11 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 spring.thymeleaf.cache=false 
+
+
+# ???ng d?n cho WebSocket endpoint
+spring.websocket.path=/chat
+# C?u hình STOMP broker (n?u dùng STOMP)
+spring.websocket.message-broker.relay.enabled=true
+spring.websocket.message-broker.relay.host=localhost
+spring.websocket.message-broker.relay.port=61613
