Gộp Mạnh Long Lực Sỹ Nam

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=AsmGD1
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %yellow(%-5level) %red([%thread]) %blue(%logger{255}) - %msg%n}
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ACVStore;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=12345678
+spring.datasource.password=123456
 
 # Cho phep dung .sql de tao bang va insert du lieu
 # following need for creating tables
@@ -89,12 +89,4 @@ ghn.api.shop-id=5386583
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 
-spring.thymeleaf.cache=false 
-
-
-# ???ng d?n cho WebSocket endpoint
-spring.websocket.path=/chat
-# C?u hình STOMP broker (n?u dùng STOMP)
-spring.websocket.message-broker.relay.enabled=true
-spring.websocket.message-broker.relay.host=localhost
-spring.websocket.message-broker.relay.port=61613
+spring.thymeleaf.cache=false
