--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 
 	<dependencies>
 
+		<!-- Thymeleaf Security Integration -->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
