--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=AsmGD1
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %yellow(%-5level) %red([%thread]) %blue(%logger{255}) - %msg%n}
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ACVStore;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.password=12345678
 
 # Cho phep dung .sql de tao bang va insert du lieu
 # following need for creating tables
@@ -86,3 +86,4 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 spring.thymeleaf.cache=false
+logging.level.com.example.AsmGD1=INFO
