--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,11 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.5</version>
+		</dependency>
 		<!-- Thymeleaf Security Integration -->
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
