--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=AsmGD1
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %yellow(%-5level) %red([%thread]) %blue(%logger{255}) - %msg%n}
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ACVStore;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=123456aA$
+spring.datasource.password=123456
+
+#Scheduler
+#app.auto-confirm-days=1
 
 # Cho phep dung .sql de tao bang va insert du lieu
 # following need for creating tables
