--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=sa
 spring.datasource.password=123456
 
 #Scheduler
-#app.auto-confirm-days=1
+order.auto-complete-seconds=1000
 
 # Cho phep dung .sql de tao bang va insert du lieu
 # following need for creating tables
